feat: make NioClient.connect() idempotent